# SMLayoutEditor

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  SavedData.xml  flake.nix  result
.github/workflows/: cachix.yml  flatpak.yml
.github/worksflows/: cachix.yml
flatpak/: desktop.desktop  io.github.Tofixrs.sm_layout_editor.json  io.github.Tofixrs.smlayouteditor.json  io.github.tofixrs.sm_layout_editor.desktop  io.github.tofixrs.sm_layout_editor.json  io.github.tofixrs.sm_layout_editor.metainfo.xml  metainfo.xml  resources.xml
nix/: configGen.nix
parts/: default.nix  shell.nix
parts/pkgs/: configGen.nix  default.nix  launcher.nix
parts/pkgs/mygui/: default.nix  font-cache.patch  font_cache.patch
parts/pkgs/mygui/patches/: xdg_config_for_settings.patch
patches/: blurry_subskin.patch  font_cache.patch
src/: main.cpp
